blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      volumes:
      - name: data
        nfs:
          path: /srv/share/backed/appdata/blog
          server: mario.local.ongy.net
          readOnly: true
      containers:
      - name: nginx
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        image: nginx
        volumeMounts:
        - mountPath: "/usr/share/nginx/html:ro"
          name: "data"
          readOnly: true
        securityContext:
          capabilities:
            drop:
            - ALL
          privileged: false
