blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
